Fix(OrderDetails) Updated Order Details Progress to be more visible

--- a/src/pages/User/Order/UserOrder.scss
+++ b/src/pages/User/Order/UserOrder.scss
@@ -13,3 +13,14 @@
     width: 100%;
     height: 100%;
 }
+
+.dot {
+  height: 16px;
+  width: 16px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+}
+.dot_first {
+  background-color: #FB3C00;
+}
